<resources>
    <string name="app_name">Cardio Doctor Dev</string>
    <string name="alert_password_title">Pocket Cardio</string>
    <string name="get_started">GET STARTED</string>
    <string name="next">NEXT</string>
    <string name="skip">Skip</string>
    <string name="hello_login">Hello Welcome to Login</string>
    <string name="sign_in">SIGN IN</string>
    <string name="request_otp">REQUEST OTP</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="user_logged_in_successfully">User logged in successfully</string>
    <string name="email_phone_number">Email/Phone Number</string>
    <string name="connect_with_social_media">Or connect with social media</string>
    <string name="custom_auth_signin_status_user">User ID: %s</string>
    <string name="custom_auth_signin_status_failed">Error: sign in failed</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="create_an_account">Create an Account</string>
    <string name="signup">Sign Up</string>
    <string name="signup_caps">SIGN UP</string>
    <string name="do_not_have_an_account">Don’t have an account?</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="plus_one">+1</string>
    <string name="first_name">First Name</string>
    <string name="first_name_star">First Name<font fgcolor='#FF0000'>*</font></string>
    <string name="last_name_star">Last Name<font fgcolor='#FF0000'>*</font></string>
    <string name="first_name_hint"><font size="12">First Name*</font></string>
    <string name="large_dummy_text">sdfsdfdsfsasdfadsfdsfasdfsddfsdfsdfsdfsdfsdfsafdafsdrewrefsdfsdfsdfsdfsdfsdfdsfdfasfsdfdsfsdfdsfdfds</string>
    <string name="last_name">Last Name</string>
    <string name="last_name_hint"><font size="12">Last Name*</font></string>
    <string name="submit_caps">SUBMIT</string>
    <string name="submit_lower_caps">Submit</string>
    <string name="email">Email</string>
    <string name="email_address">Email Address</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="i_agree_to_the">I agree to the</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="and">&amp;</string>
    <string name="password_does_not_match">Your passwords do not match, please check.</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_first_name">Please enter first name</string>
    <string name="enter_last_name">Please enter last name</string>
    <string name="select_ailment">Please select Diagnosis</string>
    <string name="enter_age">Please enter age</string>
    <string name="enter_dob">Please date of birth</string>
    <string name="enter_weight">Please enter Weight</string>
    <string name="enter_heart_rate">Please enter Heart Rate</string>
    <string name="enter_top_bp">Please enter Top BP</string>
    <string name="enter_bottom_bp">Please enter Bottom BP</string>
    <string name="enter_set_count">Please enter Steps</string>
    <string name="enter_energy">Please enter Active Energy</string>
    <string name="enter_ailment">Please enter Diagnosis</string>
    <string name="enter_valid_first_name">First name must be atleast 3 characters long</string>
    <string name="enter_medicine">Enter medicine</string>
    <string name="enter_email_address">Please enter your email</string>
    <string name="err_valid_email">Please enter a valid email</string>
    <string name="enter_valid_last_name">Last name must be atleast 3 characters long</string>
    <string name="err_empty_password">Please enter your password</string>
    <string name="err_confirm_password">Please enter confirm password</string>
    <string name="err_valid_password">Password must contain 8–20 characters, with one uppercase alphabet, one lowercase alphabet, one number and a special character</string>
    <string name="err_email_exist">Email Id already exist</string>
    <string name="err_phonenumber_already_exist">Phone Number already exist</string>
    <string name="err_user_does_not_exist">User doesn\'t exist</string>
    <string name="err_image_not_uploaded">Image not uploaded kindly try again</string>
    <string name="enter_valid_mobile">Please enter phone number</string>
    <string name="err_valid_phone_number">Please enter a valid phone number</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="phone_verification_description">Kindly enter the 6 digit verification code sent to </string>
    <string name="not_yet_received">Not yet received?</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_password_ques_mark">Forgot Password?</string>
    <string name="please_provide_your_registered_number">Please provide your registered email in order to retrieve your password</string>
    <string name="registered_your_account_password">Enter your registered email address in order to reset your account password</string>
    <string name="reset_password">Reset Password</string>
    <string name="forgot_password_email_sent">Link has been sent on your registered email Id to reset password</string>
    <string name="welcome_to_dashboard">Welcome to Dashboard</string>
    <string name="title_profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="menu">Menu</string>
    <string name="setting">Settings</string>
    <string name="other_details">Other Details</string>
    <string name="gender">Gender</string>
    <string name="gender_with_coulmn">Gender : </string>
    <string name="na">NA</string>
    <string name="weight_in_kg">Weight (Kg)</string>
    <string name="height_in_cm">Height (Kg)</string>
    <string name="wearable">Wearable</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="height_in_centimeter">Height (in cm)</string>
    <string name="weight_in_lbs">Weight (in lbs)</string>
    <string name="weight_in_lbs_star">Weight<font fgcolor='#FF0000'>*</font>(in lbs)</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="date_of_birth_star">Date Of Birth<font size="12" fgcolor='#FF0000'>*</font></string>
    <string name="date_of_birth_with_column">Date Of Birth : </string>
    <string name="please_select_gender">Please select gender</string>
    <string name="please_select_ailment">Please select Diagnosis</string>
    <string name="date_of_birth_val">Please enter valid date of birth</string>
    <string name="valid_height">Please enter valid height</string>
    <string name="valid_weight">Please enter valid weight rate</string>
    <string name="user_detail_not_found">User detail not found</string>
    <string name="select_gender">Select Gender</string>
    <string name="profile_updated_successfully">Profile Detail Updated Successfully</string>
    <string name="password_change_successfully">Your password has been successfully changed</string>
    <string name="email_change_successfully">Your email has been successfully changed</string>
    <string name="success">Success</string>
    <string name="notification_preference">Notification Preference</string>
    <string name="change_password">Change Password</string>
    <string name="about_us">About Us</string>
    <string name="faq">FAQ’s</string>
    <string name="terms_and_conditions">Terms &amp; Conditions</string>
    <string name="logout">Logout</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="logout_description">Are you sure you want to logout?</string>
    <string name="save">SAVE</string>
    <string name="please_enter_your_old_password">Please enter old password</string>
    <string name="please_enter_your_new_password">Please enter new password</string>
    <string name="old_and_new_password_should_not_same">Old password and new password should not be the same</string>
    <string name="sync_health_data">Sync Health Data</string>
    <string name="fitbit">Fitbit</string>
    <string name="google_fit">Google Fit</string>
    <string name="click_one_more_time_to_exit_the_app">Click one more time to exit the app</string>
    <string name="alpha_true">True</string>
    <string name="alpha_false">False</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="email_not_in_use">Email not in use</string>
    <string name="email_already_in_use">Email already in use</string>
    <string name="user_not_valid">User not valid</string>
    <string name="invalid_mobile_number">Invalid phone number.</string>
    <string name="quota_exceeded">Quota exceeded.</string>
    <string name="invalid_code">Invalid code</string>
    <string name="otp_has_expired">Otp has been expired. Kindly click on resend OTP</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="getting_some_error">We\'re getting some error, Please try again later</string>
    <string name="verification_link">Physician has been successfully registered and verification link sent to your registered email id. Please verify your email to login with email id.</string>
    <string name="verify_email">Email id is not verified for this user. Kindly verify the email first</string>
    <string name="image_saved">Image has been saved to your Photos</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="err_no_network_available">Please check your internet connection and try again later.</string>
    <string name="err_empty_to_identifying_user_blocked" />
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="unable_to_create_google_account">Unable to create Google account !!</string>
    <string name="unable_to_save_values_to_database">Unable to save values to database !!</string>
    <string name="resend_link">Resend Link</string>
    <string name="message_verification_email_sent">Verification link sent to your registered email id</string>
    <string name="verify_password">Verify Password</string>
    <string name="msg_change_email_label">To edit your email please enter your password</string>
    <string name="ailment">DIAGNOSIS</string>
    <string name="ailment_summmary">Diagnosis Summary</string>
    <string name="ailment_camelcase">Diagnosis</string>
    <string name="patient_details">PATIENT DETAILS</string>
    <string name="age">Age<font fgcolor='#FF0000'>*</font>(in years)</string>
    <string name="age_black_color">Age (in years)</string>
    <string name="age_only">Age</string>
    <string name="age_only_with_column">Age :</string>
    <string name="age_hint"><font size="12">Age*(in years)</font></string>
    <string name="title_diagnosis_column">Diagnosis :</string>
    <string name="name_with_coulmn">Name : </string>
    <string name="assesment_date">Assesment Date :</string>
    <string name="none">NONE</string>
    <string name="mra">MRA</string>
    <string name="ace_arb">ACE/ARB</string>
    <string name="sglt2_inhibitor">SGLT2 Inhibitor</string>
    <string name="arni">ARNI</string>
    <string name="beta_blocker">Beta Blocker</string>
    <string name="other">Other</string>
    <string name="basic_details">Basic Details</string>
    <string name="choose_options">Choose Options</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="camera">Camera</string>
    <string name="remove_photo">Remove Photo</string>
</resources>