<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login_signup.fragment.ForgotPasswordFragment">

        <include
            android:id="@+id/headerView"
            layout="@layout/toolbar" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/forgotPasswordInstruction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24sdp"
            android:text="@string/registered_your_account_password"
            app:layout_constraintStart_toStartOf="@+id/verticalLeftGuideline"
            app:layout_constraintEnd_toStartOf="@id/verticalRightGuideline"
            app:layout_constraintTop_toBottomOf="@+id/headerView"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtEmailId"
            style="@style/BaseAppTheme.EdtTxt"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:hint="@string/email_address"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLines="@integer/int_1"
            android:paddingLeft="@dimen/_16sdp"
            android:paddingRight="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            app:layout_constraintEnd_toEndOf="@+id/verticalRightGuideline"
            app:layout_constraintHorizontal_weight="@integer/int_1"
            app:layout_constraintStart_toStartOf="@+id/verticalLeftGuideline"
            app:layout_constraintTop_toBottomOf="@+id/forgotPasswordInstruction" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnResetPassword"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_43sdp"
            android:text="@string/reset_password"
            app:layout_constraintEnd_toEndOf="@id/verticalRightGuideline"
            app:layout_constraintStart_toStartOf="@id/verticalLeftGuideline"
            app:layout_constraintTop_toBottomOf="@+id/edtEmailId" />

        <include layout="@layout/guideline_left"/>
        <include layout="@layout/guideline_right"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>